Fix up spacing based on resize

--- a/hlx_statics/blocks/hero.css
+++ b/hlx_statics/blocks/hero.css
@@ -24,7 +24,7 @@ main div.hero > div:first-child {
 }
 
 @media screen and (max-width: 1280px) {
-  main div.hero > div {
+  main div.hero > div:first-child {
     width: 100%;
     margin: 0;
   }
